# WorkingHourManager

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Backend/: Main.cpp
Backend/Main/: Backend.cpp  Backend.hpp
Backend/Main/Backend/: ControllerYear.cpp  FileReader.cpp  FileWriter.hpp
Backend/Main/Common/: ControllerWeek.cpp  ControllerWeek.hpp  TimeConvert.cpp  TimeConvert.hpp
Backend/Main/Common/ControllerWeek/: ControllerDay.cpp  ControllerDay.hpp  HoursAndMinutes.cpp  HoursAndMinutes.hpp
Backend/Main/Common/ControllerWeek/ControllerDay/: Day.cpp  Day.hpp
Backend/Main/Support/: Date.cpp  Date.hpp  Time.hpp
Frontend/: Main.qml
Frontend/Main/: Header.qml
Frontend/Main/Week/: Day.qml
backend/: Backend.cpp  Backend.hpp  ControllerDay.cpp  ControllerDay.hpp  ControllerMonth.cpp  ControllerMonth.hpp  ControllerWeek.cpp  ControllerWeek.hpp  ControllerYear.cpp  HoursAndMinutes.cpp  HoursAndMinutes.hpp  main.cpp
frontend/: Day.qml  Footer.qml  Header.qml  Week.qml  main.qml
src/app/: CMakeLists.txt
src/app/ressources/qml/: Main.qml  Years.qml
src/app/ressources/qml/Day/: Day.qml
src/app/ressources/qml/Main/: Month.qml  PopupEnterStartYear.qml  Week.qml  Year.qml  Years.qml
src/app/ressources/qml/Main/Year/: FooterYear.qml  Month.qml  SettingsYear.qml
src/app/ressources/qml/Main/Year/Month/: FooterMonth.qml  Header.qml  HeaderMonth.qml
src/app/ressources/qml/Main/Year/Month/Week/: Day.qml  FooterWeek.qml
src/app/ressources/qml/Main/Year/Month/Week/Day/: HourMinInput.qml
src/app/ressources/qml/Main/Year/SettingsYear/: FlextimeDays.qml  HeaderSettingsYear.qml  SettingsDay.qml  VacationDays.qml  VaccationDays.qml
src/app/ressources/qml/Main/Years/: Settings.qml  Year.qml
src/app/ressources/qml/Main/Years/Year/: Month.qml  SettingsYear.qml
src/app/ressources/qml/Main/Years/Year/Month/: Week.qml
src/app/ressources/qml/Main/Years/Year/Month/Week/: Day.qml
src/app/ressources/qml/Main/Years/Year/SettingsYear/: FlextimeDays.qml  HeaderSettingsYear.qml  SettingsDay.qml  VacationDays.qml
src/app/ressources/qml/Month/: Month.qml
src/app/ressources/qml/Month/Month/: FooterMonth.qml  HeaderMonth.qml
src/app/ressources/qml/Types/: DoubleInput.qml  HourMinInput.qml
src/app/ressources/qml/Week/: Week.qml
src/app/ressources/qml/Week/Week/: FooterWeek.qml
src/app/ressources/qml/Year/: Year.qml
src/app/ressources/qml/Year/Year/: FooterYear.qml  SettingsYear.qml
src/app/ressources/qml/Year/Year/SettingsYear/: FlextimeDays.qml  HeaderSettingsYear.qml  SettingsDay.qml  VacationDays.qml
src/app/src/: Main.cpp
src/app/src/Main/: Backend.cpp  Backend.hpp
src/app/src/Main/Backend/: ControllerYear.hpp  FileReader.cpp  FileWriter.cpp
src/app/src/Main/Backend/ControllerYear/: ControllerMonth.cpp
src/app/src/Main/Common/: ControllerWeek.cpp  ControllerWeek.hpp
src/app/src/Main/Common/ControllerWeek/: ControllerDay.cpp  ControllerDay.hpp
src/app/src/Main/Common/ControllerWeek/ControllerDay/: Day.cpp  Day.hpp
src/app/src/Main/Controller/: ControllerDay.cpp  ControllerDay.hpp  ControllerMonth.cpp  ControllerMonth.hpp  ControllerWeek.cpp  ControllerWeek.hpp  ControllerYear.cpp  ControllerYear.hpp  HelperControllerYear.cpp  HelperControllerYear.hpp
src/app/src/Main/Controller/ControllerDay/: ControllerDayStateFlextime.cpp  ControllerDayStateFlextime.hpp  ControllerDayStateHoliday.cpp  ControllerDayStateIgnore.cpp  ControllerDayStateIgnore.hpp  ControllerDayStateParty.cpp  ControllerDayStateSick.cpp  ControllerDayStateSick.hpp  ControllerDayStateVacation.cpp  ControllerDayStateWork.cpp  ControllerDayStateWork.hpp
src/app/src/Main/Controller/ControllerYear/: ControllerSettingsDay.cpp  ControllerSettingsDay.hpp  ControllerSettingsYear.cpp  ControllerSettingsYear.hpp
src/app/src/Main/FileIO/: FileReader.cpp  FileReader.hpp  FileWriter.cpp  FileWriter.hpp
src/app/src/Main/Settings/: SettingsDay.cpp  SettingsYear.cpp  SettingsYear.hpp
src/app/src/Main/Support/: Time.cpp
src/app/src/Main/Types/: Day.hpp
src/day/: CMakeLists.txt
src/day/include/whm/day/: ControllerDay.hpp  ControllerSettingsDay.hpp  Day.hpp  DayType.hpp  HelperDay.hpp  SettingsDay.hpp
src/day/src/: ControllerDay.cpp  ControllerSettingsDay.cpp  Day.cpp  Daytype.cpp  HelperDay.cpp  SettingsDay.cpp
src/day/src/ControllerDay/: ControllerDayState.hpp  ControllerDayStateFlextime.cpp  ControllerDayStateFlextime.hpp  ControllerDayStateHoliday.cpp  ControllerDayStateHoliday.hpp  ControllerDayStateIgnore.cpp  ControllerDayStateIgnore.hpp  ControllerDayStateParty.cpp  ControllerDayStateParty.hpp  ControllerDayStateSick.cpp  ControllerDayStateSick.hpp  ControllerDayStateVacation.cpp  ControllerDayStateVacation.hpp  ControllerDayStateWork.cpp  ControllerDayStateWork.hpp
src/file/: CMakeLists.txt
src/file/include/whm/file/: FileReader.hpp  FileWriter.hpp
src/file/src/: FileReader.cpp  FileWriter.cpp
src/month/: CMakeLists.txt
src/month/include/whm/month/: ControllerMonth.hpp
src/month/src/: ControllerMonth.cpp
src/settings/: CMakeLists.txt
src/settings/include/whm/settings/: ControllerSettings.hpp  Settings.hpp  SettingsDay.hpp  SettingsYear.hpp
src/settings/src/: ControllerSettings.cpp  Settings.cpp  SettingsDay.cpp  SettingsYear.cpp
src/types/: CMakeLists.txt
src/types/include/whm/types/: Date.hpp  Day.hpp  DayType.hpp  HelperDay.hpp  HoursAndMinutes.hpp  Time.hpp  Weekday.hpp
src/types/src/: Date.cpp  Day.cpp  Daytype.cpp  HelperDay.cpp  HoursAndMinutes.cpp  Time.cpp
src/week/: CMakeLists.txt
src/week/include/whm/week/: ControllerWeek.hpp
src/week/src/: ControllerWeek.cpp
src/year/: CMakeLists.txt
src/year/include/whm/year/: ControllerSettingsYear.hpp  ControllerYear.hpp  HelperControllerYear.hpp  SettingsYear.hpp
src/year/src/: ControllerSettingsYear.cpp  ControllerYear.cpp  HelperControllerYear.cpp  SettingsYear.cpp
