add_executable(appWorkingHourManager
    src/Main.cpp
    src/Main/Backend.hpp
    src/Main/Backend.cpp    
    src/Main/Controller/ControllerDay.hpp
    src/Main/Controller/ControllerDay.cpp
    src/Main/Controller/ControllerDay/ControllerDayState.hpp
    src/Main/Controller/ControllerDay/ControllerDayStateFlextime.hpp
    src/Main/Controller/ControllerDay/ControllerDayStateFlextime.cpp
    src/Main/Controller/ControllerDay/ControllerDayStateHoliday.hpp
    src/Main/Controller/ControllerDay/ControllerDayStateHoliday.cpp
    src/Main/Controller/ControllerDay/ControllerDayStateIgnore.hpp
    src/Main/Controller/ControllerDay/ControllerDayStateIgnore.cpp
    src/Main/Controller/ControllerDay/ControllerDayStateParty.hpp
    src/Main/Controller/ControllerDay/ControllerDayStateParty.cpp
    src/Main/Controller/ControllerDay/ControllerDayStateSick.hpp
    src/Main/Controller/ControllerDay/ControllerDayStateSick.cpp
    src/Main/Controller/ControllerDay/ControllerDayStateVacation.hpp
    src/Main/Controller/ControllerDay/ControllerDayStateVacation.cpp
    src/Main/Controller/ControllerDay/ControllerDayStateParty.hpp
    src/Main/Controller/ControllerDay/ControllerDayStateParty.cpp
    src/Main/Controller/ControllerDay/ControllerDayStateWork.hpp
    src/Main/Controller/ControllerDay/ControllerDayStateWork.cpp
    src/Main/Controller/ControllerMonth.hpp
    src/Main/Controller/ControllerMonth.cpp
    src/Main/Controller/ControllerWeek.hpp
    src/Main/Controller/ControllerWeek.cpp
    src/Main/Controller/ControllerYear.hpp
    src/Main/Controller/ControllerYear.cpp
    src/Main/Controller/ControllerYear/ControllerSettingsDay.hpp
    src/Main/Controller/ControllerYear/ControllerSettingsDay.cpp
    src/Main/Controller/ControllerYear/ControllerSettingsYear.hpp
    src/Main/Controller/ControllerYear/ControllerSettingsYear.cpp
    src/Main/Controller/HelperControllerYear.hpp
    src/Main/Controller/HelperControllerYear.cpp
)

qt_add_qml_module(appWorkingHourManager
    URI WorkingHourManager
    VERSION 1.0
    QML_FILES
    ressources/qml/Types/DoubleInput.qml
    ressources/qml/Types/HourMinInput.qml
    ressources/qml/Main.qml
    ressources/qml/Main/PopupEnterStartYear.qml
    ressources/qml/Main/Years.qml
    ressources/qml/Main/Years/Year.qml
    ressources/qml/Main/Years/Year/FooterYear.qml
    ressources/qml/Main/Years/Year/Month.qml
    ressources/qml/Main/Years/Year/Month/HeaderMonth.qml
    ressources/qml/Main/Years/Year/Month/Week.qml
    ressources/qml/Main/Years/Year/Month/FooterMonth.qml
    ressources/qml/Main/Years/Year/Month/Week/Day.qml
    ressources/qml/Main/Years/Year/Month/Week/FooterWeek.qml
    ressources/qml/Main/Years/Year/SettingsYear.qml
    ressources/qml/Main/Years/Year/SettingsYear/HeaderSettingsYear.qml
    ressources/qml/Main/Years/Year/SettingsYear/FlextimeDays.qml
    ressources/qml/Main/Years/Year/SettingsYear/SettingsDay.qml
    ressources/qml/Main/Years/Year/SettingsYear/VacationDays.qml
)

target_compile_definitions(appWorkingHourManager
    PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)

target_link_libraries(appWorkingHourManager
    PRIVATE
    Qt6::Quick
    whm-file
    whm-types
    whm-settings)
